# havoc

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
crates/disruption/: Cargo.toml
crates/disruption/src/: api.rs  config.rs  db.rs  lib.rs  main.rs  schema.sql  scraping.rs  webhook.rs
crates/havoc/: Cargo.toml
crates/havoc/src/: artifact.rs  dump.rs  lib.rs  main.rs  scrape.rs
crates/havoc/src/discord/: assets.rs  branch.rs  build.rs  manifest.rs  mod.rs
crates/havoc/src/discord/assets/: cache.rs  collections.rs  ext.rs  frontend.rs  root.rs
crates/havoc/src/dump/: classes.rs  mod.rs  modules.rs
crates/havoc/src/parse/: mod.rs  webpack.rs
crates/watchdog/: Cargo.toml
crates/watchdog/src/: api.rs  config.rs  db.rs  lib.rs  main.rs  schema.sql  scraping.rs  subscription.rs  webhook.rs
spectacles/: README.md  package-lock.json  package.json
spectacles/app/: build.server.ts  build.ts  collapsing.ts  db.server.ts  root.tsx
spectacles/app/components/: BuildHeader.css  BuildHeader.tsx  WrappingBuildsList.css  WrappingBuildsList.tsx
spectacles/app/routes/: index.tsx
spectacles/app/styles/: global.css  historicalBuilds.css
spectacles/src/app/: layout.module.css  layout.tsx  not-found.tsx  page.module.css  page.tsx
spectacles/src/components/: BuildHeader.module.css  BuildHeader.tsx  Copier.module.css  Copier.tsx  WrappingBuildsList.module.css  WrappingBuildsList.tsx
spectacles/src/db/: asset.ts  build.ts  index.ts
spectacles/src/models/: asset.ts  build.ts
spectacles/src/styles/: base.css
src/: artifact.rs  assets.rs  discord.rs  dump.rs  lib.rs  main.rs  parse.rs  scrape.rs  util.rs  wrecker.rs
src/discord/: asset.rs  assets.rs  branch.rs  build.rs  manifest.rs  mod.rs
src/parse/: classes.rs  webpack.rs
