[package]
name = "havoc"
version = "0.1.0"
authors = ["slice <tinyslices@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
regex = "1"
lazy_static = "1.4.0"
url = "2.2.1"
http = "0.2.1"
log = "0.4"
pretty_env_logger = "0.4"
swc_ecma_parser = "0.54.4"
swc_common = "0.10.17"
swc_ecma_ast = "0.43.1"
swc_ecma_visit = "0.29.1"
swc_visit = "0.2.4"
serde_json = "1.0"
clap = "2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.isahc]
version = "1.3"
features = ["json"]
