[package]
name = "havoc"
version = "0.1.0"
authors = ["slice <tinyslices@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1.0.24"
regex = "1"
lazy_static = "1.4.0"
url = "2.2.1"
http = "0.2.1"
tracing = "0.1"
tracing-subscriber = "0.2"
swc_ecma_parser = "0.87.0"
swc_common = "0.17.0"
swc_ecma_ast = "0.65.1"
swc_ecma_visit = "0.51.0"
swc_visit = "0.2.4"
serde_json = "1.0"
clap = "3"
if_chain = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
isahc = { version = "1.7", features = ["json"] }
tokio = { version = "1.21.2", features = ["rt", "io-util", "macros"] }
async-trait = "0.1.57"
