[package]
name = "havoc"
description = "discord client instrumentation toolkit"
version = "0.1.0"
authors = ["slice <tinyslices@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1.0.24"
regex = "1"
lazy_static = "1.4.0"
url = "2.2.1"
http = "0.2.1"
tracing = "0.1"
tracing-subscriber = "0.2"
swc_ecma_parser = "0.122.5"
swc_common = "0.29.4"
swc_ecma_ast = "0.94.4"
swc_ecma_visit = "0.80.4"
swc_visit = "0.5.3"
serde_json = "1.0"
clap = { version = "4", features = ["cargo"] }
if_chain = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
isahc = { version = "1.7", features = ["json"] }
tokio = { version = "1.21.2", features = ["rt", "io-util", "macros"] }
async-trait = "0.1.57"
futures = "0.3.24"
termcolor = "1.2.0"
atty = "0.2.14"
