[package]
name = "watchdog"
version = "0.1.0"
authors = ["slice <tinyslices@gmail.com>"]
edition = "2021"

[[bin]]
name = "watchdog"

[dependencies]
anyhow = "1.0.55"
tracing = "0.1.31"
tracing-subscriber = "0.2.12"
havoc = { path = "../havoc" }
isahc = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
chrono-tz = "0.6"
toml = "0.5"
tokio = { version = "1.21.2", features = ["full"] }
axum = "0.6.10"
tower-http = { version = "0.3.4", features = ["trace"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "postgres", "chrono" ] }
